# StopNet

./: data.py  loss.py  model.py  prepare_data.py  pyproject.toml  run.py  training.py
